--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -96,3 +96,35 @@ body {
     margin: 30px 0;
     font-size: 1.5em;
 }
+#welcome_screen {
+    width: 100%;
+    height: 100%;
+    background-color: #ecf0f1;
+    position: absolute;
+    z-index:3;
+    left: 0;
+    top: 0;
+}
+#username_wrapper {
+    width: 500px;
+    height: 300px;
+    margin-left: auto;
+    text-align:center;
+    margin-right: auto;
+    margin-top: 100px;
+}
+#username_inner_wrapper {
+    margin-top: 50px;   
+}
+#username_inner_wrapper i {
+    font-size: 5em;
+}
+#username_input {
+    font-size: 2em;
+    outline: none;
+    position: relative;
+    top: -20px;
+}
+#username_wrapper button {
+    font-size: 1.5em;   
+}
