Added ability to detect what room person is in and broadcast only to that room. Added function to save new rooms to mysql. Added in Express JS templating. Index page is now being served from Node JS. PHP and Apache are no longer needed.

--- a/views/index.html
+++ b/views/index.html
@@ -1,46 +1,47 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Messaging Room</title>
+    <!-- INCLUDE CSS -->
     <link href="resources/css/main.css" rel="stylesheet" />
     <link href="resources/css/bootstrap.min.css" rel="stylesheet" />
     <link href="resources/css/codemirror.css" rel="stylesheet" />
     <link href="resources/css/theme/rubyblue.css" rel="stylesheet" />
-    <script src="resources/js/jquery-1.10.2.min.js"></script>
-    <script src="resources/js/codemirror.js"></script>
-    <script src="resources/js/javascript.js"></script>
-    <script src="resources/js/codeMirrorInit.js"></script>
+
+    <!-- INCLUDE LIBRARIES -->
+    <script src="resources/js/libs/jquery-1.10.2.min.js"></script>
+    <script src="resources/js/libs/codemirror.js"></script>
+    <script src="resources/js/libs/codeMirrorjs.js"></script>
+    <script src="resources/js/mylibs/codeMirrorInit.js"></script>
     <script src="resources/js/socket-io/socket.io.min.js"></script>
-    <script src="resources/js/app.js"></script>
-    <script>ROOM_ID = <%=room_id%>;</script>
+
+    <!-- INCLUDE CHATE CODE -->
+    <script src="resources/js/mylibs/ChatSocket.js"></script>
+    <script src="resources/js/mylibs/Chat.js"></script>
+    <script src="resources/js/mylibs/Message.js"></script>
+    <script src="resources/js/mylibs/User.js"></script>
+
+    <!-- Room ID generated from server based on URL the user has entered -->
+	<script>ROOM_ID = <%=room_id%>;</script>
 </head>
+
 <body>
     <section id='main_wrapper'>
         <aside id='user_list_wrapper'>
+            <div id='user_list_heading'>
+                <i class='glyphicon glyphicon-user'></i>
+                <span>Current Users</span>
+            </div>
+            <div id='leave_chat' class='btn btn-primary'>
+                <span>Leave Chat</span>
+                <i class='glyphicon glyphicon-log-out'></i>
+            </div>
             <div id='user_list'>
-                <div id='user_list_heading'>
-                    <i class='glyphicon glyphicon-user'></i>
-                    <span>Current Users</span>
-                </div>
-                <div class='user_entry'>
-                    <p>Matthew Sessions</p>
-                </div>
             </div>
         </aside>
         <section id='chat_wrapper' ng-controller="ChatController">
             <div id='chat_window'>
-                <div class='chat code'>
-                    <p class='user'>Matt Sessions has sent code</p>
-                    <p class='time'>10:10:30 PM</p>
-                    <p class='code_message'>
-                        <button class='btn btn-primary'>
-                            <i class='glyphicon glyphicon-cloud-download'></i>
-                            <br>Download Code</button>
-                        <button class='btn btn-primary'>
-                            <i class='glyphicon glyphicon-indent-left'></i>
-                            <br>Edit Code</button>
-                    </p>
-                </div>
             </div>
             <div id='chat_input'>
                 <textarea placeholder="Send Message..." id='message'></textarea>
@@ -58,5 +59,20 @@
             </div>
         </section>
     </section>
+    <section id='welcome_screen'>
+        <div id='username_wrapper' class='well'>
+            <h1>Welcome to
+                <strong>CodeShare</strong>
+            </h1>
+            <div id='username_inner_wrapper'>
+                <i class='glyphicon glyphicon-user'></i>
+                <input id='username_input' type='text' placeholder="Username" />
+            </div>
+            <button class='btn btn-primary'>Enter
+                <i class='glyphicon glyphicon-log-in'></i>
+            </button>
+        </div>
+    </section>
 </body>
+
 </html>
