--- a/views/index.html
+++ b/views/index.html
@@ -74,7 +74,7 @@
             </div>
             <div id='password_inner_wrapper'>
                 <i class='glyphicon glyphicon-asterisk'></i>
-                <input id='password_input' type='text' placeholder="Password" />
+                <input id='password_input' type='password' placeholder="Password" />
             </div>
             <button class='btn btn-primary'>Enter
                 <i class='glyphicon glyphicon-log-in'></i>
