--- a/views/index.html
+++ b/views/index.html
@@ -85,11 +85,12 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">Create Room:
+                    <h2 class="modal-title">Create Room:
                         <%=room_name%>
-                    </h4>
+                    </h2>
                 </div>
                 <div class="modal-body">
+                    <i class='glyphicon glyphicon-lock'></i>
                     <h4>You have just created a new room.</h4>
                     <p>Please provide a password</p>
                     <input type='password' id='new_room_password' placeholder="Password" />
