Fixed some UI stuff and code is now downloadable. Fixed some bugs where creating a private room wouldn't let you use a password after creating it.

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -64,7 +64,7 @@ body {
     clear: both;
     text-align: center;
 }
-.chat .code_message button {
+.chat .code_message .btn {
     font-size: 1.5em;
     margin: 0 10px;
 }
