--- a/views/index.html
+++ b/views/index.html
@@ -92,12 +92,12 @@
                 <div class="modal-body">
                     <i class='glyphicon glyphicon-lock'></i>
                     <h4>You have just created a new room.</h4>
-                    <p>Please provide a password</p>
+                    <p>Please create a password</p>
                     <input type='password' id='new_room_password' placeholder="Password" />
                 </div>
                 <div class="modal-footer">
-                    <button id="create_private_button" type="button" class="btn btn-primary">Create Private Room</button>
-                    <button id="create_public_button" type="button" class="btn btn-default">Create Public Room</button>
+                    <button id="create_private_button" type="button" class="btn btn-primary">Set Room Private</button>
+                    <button id="create_public_button" type="button" class="btn btn-default">Set Room Public</button>
                 </div>
             </div>
             <!-- /.modal-content -->
